--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <svg height="40" width="150">
                   <rect id="shape" height="40" width="150" />
                   <div id="text">
-                    <a href="#" class="choose" id="easy"><span class="spot"></span>EASY</a>
+                    <a href="#" class="choose" data-id='easy' id="easy"><span class="spot"></span>EASY</a>
                   </div>
                 </svg>
               </div>
@@ -55,7 +55,7 @@
                 <svg height="40" width="150">
                   <rect id="shape2" class="mod" height="40" width="150" />
                   <div id="text">
-                    <a href="#" class="choose" id="moderate"><span class="spot"></span>MODERATE</a>
+                    <a href="#" class="choose" data-id='moderate' id="moderate"><span class="spot"></span>MODERATE</a>
                   </div>
                 </svg>
               </div>
@@ -64,7 +64,7 @@
                 <svg height="40" width="150">
                   <rect id="shape3" height="40" width="150" />
                   <div id="text">
-                    <a href="#" class="choose" id="hard"><span class="spot"></span>HARD</a>
+                    <a href="#" class="choose" data-id='hard' id="hard"><span class="spot"></span>HARD</a>
                   </div>
                 </svg>
               </div>
@@ -86,8 +86,7 @@
       </div>
         
     </div>
-
-   
+   </div>
    
     
   </body>
