--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       <div id="content" align="center">
         <p>iQuiz</p>
         <hr>
+      </div>
+      <div class="questionssszzz">
         <h3 id="question"></h3>
         <div id="choices">
         </div>
