--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>iQuiz</p>
         <hr>
       </div>
-      <div class="questionssszzz">
+      <div id="div_Q" align="center">
         <h3 id="question"></h3>
         <div id="choices">
         </div>
